--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
 		"@tanstack/router-plugin": "^1.121.2",
 		"@types/node": "^24.2.1",
 		"clsx": "^2.1.1",
+		"embla-carousel-react": "^8.6.0",
+		"lucide-react": "^0.539.0",
 		"motion": "^12.23.12",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
