--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"check": "prettier --write . && eslint --fix"
 	},
 	"dependencies": {
+		"@radix-ui/react-slot": "^1.2.3",
 		"@tabler/icons-react": "^3.34.1",
 		"@tailwindcss/vite": "^4.0.6",
 		"@tanstack/react-devtools": "^0.2.2",
@@ -20,6 +21,7 @@
 		"@tanstack/react-router-devtools": "^1.131.5",
 		"@tanstack/router-plugin": "^1.121.2",
 		"@types/node": "^24.2.1",
+		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"embla-carousel-react": "^8.6.0",
 		"lucide-react": "^0.539.0",
