--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"lucide-react": "^0.539.0",
 		"motion": "^12.23.12",
 		"react": "^19.0.0",
+		"react-audio-play": "^1.0.4",
 		"react-dom": "^19.0.0",
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "^4.0.6"
