--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"react": "^19.0.0",
 		"react-audio-play": "^1.0.4",
 		"react-dom": "^19.0.0",
+		"react-dropzone": "^14.3.8",
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "^4.0.6"
 	},
